--- a/src/index.html
+++ b/src/index.html
@@ -66,23 +66,30 @@
                     <option value="z">Staff</option>
                 </select>
             </form>
+            <p class="pt-2 text-center lg:text-left">*Akan berakhir dalam 9 Hari</p>
             <div class="flex flex-col py-2 divide-y">
                 <div class="py-4" id="user-points">
                     <div class="flex items-center justify-between">
                         <div class="flex items-center gap-2">
                             <img src="./assets/icons/number-one.svg" alt="" class="w-8 h-8">
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
-                            <div class="flex items-center gap-2">
-                                <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
-                                <span class="cursor-pointer transition-transform ease-in-out select-none"
-                                    onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
-                                    <img src="./assets/icons/chevron.svg" alt="arrow">
-                                </span>
+                            <div class="flex flex-col">
+                                <!-- <span class="text-xs bg-yellow-400 py-0.5 px-3 rounded-lg uppercase w-fit">Dosen</span> -->
+                                <div class="flex flex-col">
+                                    <!-- <span class="text-xs bg-yellow-400 py-0.5 px-3 rounded-lg uppercase w-fit">Dosen</span> -->
+                                    <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
+                                </div>
                             </div>
                         </div>
-                        <span>100 XP</span>
+                        <div class="flex items-center gap-2">
+                            <span>100 XP</span>
+                            <span class="cursor-pointer transition-transform ease-in-out select-none"
+                                onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
+                                <img src="./assets/icons/chevron.svg" alt="arrow">
+                            </span>
+                        </div>
                     </div>
-                    <div class="flex flex-col hidden" id="detail-points">
+                    <div class="flex flex-col hidden pr-8" id="detail-points">
                         <div class="flex items-center gap-2 justify-end">
                             <span>XXXX</span>
                             <span>-</span>
@@ -100,17 +107,20 @@
                         <div class="flex items-center gap-2">
                             <img src="./assets/icons/number-two.svg" alt="" class="w-8 h-8">
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
-                            <div class="flex items-center gap-2">
+                            <div class="flex flex-col">
+                                <!-- <span class="text-xs bg-yellow-400 py-0.5 px-3 rounded-lg uppercase w-fit">Dosen</span> -->
                                 <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
-                                <span class="cursor-pointer transition-transform ease-in-out select-none"
-                                    onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
-                                    <img src="./assets/icons/chevron.svg" alt="arrow">
-                                </span>
                             </div>
                         </div>
-                        <span>100 XP</span>
+                        <div class="flex items-center gap-2">
+                            <span>100 XP</span>
+                            <span class="cursor-pointer transition-transform ease-in-out select-none"
+                                onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
+                                <img src="./assets/icons/chevron.svg" alt="arrow">
+                            </span>
+                        </div>
                     </div>
-                    <div class="flex flex-col hidden" id="detail-points">
+                    <div class="flex flex-col hidden pr-8" id="detail-points">
                         <div class="flex items-center gap-2 justify-end">
                             <span>XXXX</span>
                             <span>-</span>
@@ -128,17 +138,20 @@
                         <div class="flex items-center gap-2">
                             <img src="./assets/icons/number-three.svg" alt="" class="w-8 h-8">
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
-                            <div class="flex items-center gap-2">
+                            <div class="flex flex-col">
+                                <!-- <span class="text-xs bg-yellow-400 py-0.5 px-3 rounded-lg uppercase w-fit">Dosen</span> -->
                                 <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
-                                <span class="cursor-pointer transition-transform ease-in-out select-none"
-                                    onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
-                                    <img src="./assets/icons/chevron.svg" alt="arrow">
-                                </span>
                             </div>
                         </div>
-                        <span>100 XP</span>
+                        <div class="flex items-center gap-2">
+                            <span>100 XP</span>
+                            <span class="cursor-pointer transition-transform ease-in-out select-none"
+                                onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
+                                <img src="./assets/icons/chevron.svg" alt="arrow">
+                            </span>
+                        </div>
                     </div>
-                    <div class="flex flex-col hidden" id="detail-points">
+                    <div class="flex flex-col hidden pr-8" id="detail-points">
                         <div class="flex items-center gap-2 justify-end">
                             <span>XXXX</span>
                             <span>-</span>
@@ -156,17 +169,20 @@
                         <div class="flex items-center gap-2">
                             <div class="w-8 h-8 flex justify-center items-center font-semibold">4</div>
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
-                            <div class="flex items-center gap-2">
+                            <div class="flex flex-col">
+                                <!-- <span class="text-xs bg-yellow-400 py-0.5 px-3 rounded-lg uppercase w-fit">Dosen</span> -->
                                 <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
-                                <span class="cursor-pointer transition-transform ease-in-out select-none"
-                                    onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
-                                    <img src="./assets/icons/chevron.svg" alt="arrow">
-                                </span>
                             </div>
                         </div>
-                        <span>100 XP</span>
+                        <div class="flex items-center gap-2">
+                            <span>100 XP</span>
+                            <span class="cursor-pointer transition-transform ease-in-out select-none"
+                                onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
+                                <img src="./assets/icons/chevron.svg" alt="arrow">
+                            </span>
+                        </div>
                     </div>
-                    <div class="flex flex-col hidden" id="detail-points">
+                    <div class="flex flex-col hidden pr-8" id="detail-points">
                         <div class="flex items-center gap-2 justify-end">
                             <span>XXXX</span>
                             <span>-</span>
@@ -184,17 +200,20 @@
                         <div class="flex items-center gap-2">
                             <div class="w-8 h-8 flex justify-center items-center font-semibold">5</div>
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
-                            <div class="flex items-center gap-2">
+                            <div class="flex flex-col">
+                                <!-- <span class="text-xs bg-yellow-400 py-0.5 px-3 rounded-lg uppercase w-fit">Dosen</span> -->
                                 <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
-                                <span class="cursor-pointer transition-transform ease-in-out select-none"
-                                    onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
-                                    <img src="./assets/icons/chevron.svg" alt="arrow">
-                                </span>
                             </div>
                         </div>
-                        <span>100 XP</span>
+                        <div class="flex items-center gap-2">
+                            <span>100 XP</span>
+                            <span class="cursor-pointer transition-transform ease-in-out select-none"
+                                onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
+                                <img src="./assets/icons/chevron.svg" alt="arrow">
+                            </span>
+                        </div>
                     </div>
-                    <div class="flex flex-col hidden" id="detail-points">
+                    <div class="flex flex-col hidden pr-8" id="detail-points">
                         <div class="flex items-center gap-2 justify-end">
                             <span>XXXX</span>
                             <span>-</span>
