--- a/src/login.html
+++ b/src/login.html
@@ -12,16 +12,16 @@
     <div class="min-h-screen w-full flex justify-center items-center max-w-screen-sm mx-auto p-4">
         <div class="w-full flex flex-col gap-4">
             <h1 class="font-bold text-center">Brand</h1>
-            <form action="" class="flex flex-col gap-4">
+            <form action="./index.html" class="flex flex-col gap-4">
                 <div class="flex flex-col gap-2">
                     <label class="font-semibold" for="identifier">Email/Nomor identitas</label>
-                    <input type="text" name="" id="" class="border w-full p-2 rounded-md">
+                    <input type="text" name="" id="id" class="border w-full py-2 px-3 rounded-md" autofocus>
                 </div>
                 <div class="flex flex-col gap-2">
                     <label class="font-semibold" for="password">Password</label>
-                    <input type="password" name="" id="" class="border w-full p-2 rounded-md">
+                    <input type="password" name="" id="password" class="border w-full py-2 px-3 rounded-md">
                 </div>
-                <div class="flex gap-2 items-center">
+                <div class="flex gap-4 items-center">
                     <button type="submit" class="bg-blue-400 text-white px-4 py-2 rounded-md">Login</button>
                     <a href="#">Lupa password?</a>
                 </div>
